--- a/login-register.html
+++ b/login-register.html
@@ -22,6 +22,7 @@
                 <button id="buttonLogin">Login</button>
                 <button id="buttonSignup">Registar</button>
             </div>
+            <div id="userInfos">
             <div id="loginUser">
                 <form class="inputWrapper">
                     <div>
@@ -87,6 +88,17 @@
                         />
                     </button>
                 </form>
+            </div>
+        </div>
+        </div>
+        <div id="myModal" class="modal">
+            <!-- Modal content -->
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <h1 id="status"></h1>
+                
+                    <button id="upload" type="submit">Concluir</button>
+                </div>
             </div>
         </div>
         <script type="module" src="/assets/js/login.js"></script>
